Aligned all text to center. Fixed spelling errors

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -737,7 +737,9 @@ footer .owner p a {
 .markdown-body dl,
 .markdown-body table,
 .markdown-body blockquote {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
+  text-align: center;
+  font-family: monospace;
 }
 
 .markdown-body h1,
@@ -765,11 +767,16 @@ footer .owner p a {
 }
 
 .markdown-body h4 {
-  font-size: 18px;
+  font-size: 14px;
+  text-align: center;
+  font-family: monospace;
+  padding-top: -7%;
 }
 
 .markdown-body h5 {
   font-size: 16px;
+  font-family: monospace;
+  text-align: center;
 }
 
 .markdown-body pre {
